started cta styling, fixed nav bar on small screen

--- a/style.css
+++ b/style.css
@@ -19,8 +19,15 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
-  padding-top: 40px;
+  padding: 40px;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.nav-container {
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .page-link {
@@ -28,6 +35,7 @@ header {
   color: white;
   text-transform: uppercase;
   font-weight: bold;
+  font-size: 0.9rem;
 }
 
 .page-link:hover {
@@ -54,10 +62,26 @@ header {
   position: absolute;
   bottom: 10%;
   left: 10%;
+  color: tomato;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.cta-button {
+  width: 80%;
+  border-radius: 1rem;
+  height: 20%;
 }
 
 /* Footer Content Styling */
 
 footer {
   background-color: rgb(255, 99, 71, 0.9);
+  text-align: center;
+}
+
+.fa-brands {
+  color: black;
 }
